2013-02-14
 * added support for GCUSB-nStep focuser

2013-01-13
 * fixed various bugs in simulator

2013-01-20
 * test_restart command for XMLRPCd
 * queues_targets table

2013-01-17
 * moved notify connection from target to MasterConstraints

2013-01-15
 * queue window parameter

2013-01-03
 * switched_standby centrald value

2012-12-28
 * JSONRequest class

2012-12-27
 * hide/show milliseconds in time differences

2012-12-20
 * replacing wrong characters in FITS header

2012-11-29
 * timeseries (trending)

2012-11-28
 * moved model and telescope drivers to rts2tel library

2012-11-24
 * tar_telescope_mode
 * clients visible in rts2-mon

2012-11-19
 * ThorLabs FW102c driver updates, ConnThorLabs

2012-11-14
 * insert command for selector/queues
 * image mode calculation

2012-11-13
 * block until visible queue option
 * target_constraints_with_name

2012-11-09
 * camera serial and type are writable and autosaved
 * moved GPIB to connection (from sensord)

2012-11-09
 * support for HISTORY and COMMENTS fields

2012-10-26
 * bb server with mapping and observations calls

2012-10-22
 * Changed telescope driver to display "model" DEC (-180..180 range)

2012-10-16
 * images are by default created only in memory, written to disk when saving them

2012-09-10
 * added BB (Big Brother)
 * moved config.h from include into ../, create prefixed version with AX_PREFIX_CONFIG_H

2012-09-09
 * night_next command, allows darks in queue

2012-09-03
 * publish-subscribe support * for all values

2012-08-28
 * rts2-nightreport prints last night data

2012-08-26
 * changed DETSIZE to rectangle value, properly write rectangles (defines getDisplayValue)

2012-07-31
 * add values debug flag

2012-07-29
 * -o flag for rts2-scriptexec, report scriptexec progress
 * filter_id (integer) used as index instead of filter name

2012-07-09
 * global replace of rts2_nan with NAN

0.9.4
=====

2012-06-20
 * mset API

2012-06-19
 * observatory/sexadecimals configuration option

2012-06-09