@@ -1460,18 +1460,22 @@ int Camera::idle ()
 
 void Camera::changeMasterState (int old_state, int new_state)
 {
-	switch (new_state & (SERVERD_STATUS_MASK | SERVERD_STANDBY_MASK))
+	switch (new_state & SERVERD_STATUS_MASK)
 	{
-		case SERVERD_EVENING | SERVERD_STANDBY:
-		case SERVERD_DUSK | SERVERD_STANDBY:
-		case SERVERD_NIGHT | SERVERD_STANDBY:
-		case SERVERD_DAWN | SERVERD_STANDBY:
 		case SERVERD_EVENING:
 		case SERVERD_DUSK:
 		case SERVERD_NIGHT:
 		case SERVERD_DAWN:
-			beforeNight ();
-			break;
+			{
+				switch (new_state & SERVERD_ONOFF_MASK)
+				{
+					case 0:
+					case SERVERD_STANDBY:
+						beforeNight ();
+						break;
+				}
+				break;
+			}
 		default:
 			afterNight ();
 	}
